# defect-data-collector

./: .dockerignore  .gitignore  Dockerfile  INTEGRATION_CHECKLIST.md  README.md  docker-compose.yml  my_collector.yaml
.github/workflows/: publish.yml
config/: my_collector.yaml
defect_data_collector/: README.md  package.xml  setup.cfg  setup.py
defect_data_collector/config/: collector.yaml
defect_data_collector/defect_data_collector/: collector.py  collector_node.py  simulator.py  simulator_node.py
defect_data_collector/launch/: defect_collection.launch.py
