<?xml version="1.0"?>
<package format="3">
  <name>defect_data_collector</name>
  <version>0.1.0</version>
  <description>Collect PoseArray from /defect_gen/defect_pose to Parquet/CSV; includes a simulator.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
